# python-becarios

./: ciclos_definidos.ipynb  clases.ipynb  clases_2.ipynb  condicionales.ipynb  estructura_de_datos-conjuntos.ipynb  estructura_de_datos-diccionarios.ipynb  estructura_de_datos-lista.ipynb  estructura_de_datos-tuplas.ipynb  funciones_anonimas.ipynb  herencia.ipynb  importacion_paquetes.ipynb  intro_funciones.ipynb  local.py  métodos_de_clase.ipynb  tipos_de_argumentos.ipynb  variables.ipynb
ambiente-poetry/: comandos-poetry  notas-vim  pyproject.toml
